--- a/style.css
+++ b/style.css
@@ -196,3 +196,33 @@ div.task input:checked + label {
 div.task label {
     font-size: 1.8rem;
 }
+
+@media(max-width: 530px) {
+    :root {
+        font-size: 60%;
+    }
+
+    div#container {
+        max-width: 55%;
+    }
+}
+
+@media(max-width: 430px) {
+    :root {
+        font-size: 58%;
+    }
+
+    div#container {
+        max-width: 60%;
+    }
+}
+
+@media(max-width: 390px) { 
+    :root {
+        font-size: 56%;
+    }
+
+    div#container {
+        max-width: 75%;
+    }
+}
