--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow-x: hidden;
 }
 
@@ -113,6 +113,7 @@ div.add-task button {
 div.add-task button:hover {
     background: #0671fc;
     box-shadow: 2px 3px 6px rgb(51, 131, 235);
+    cursor: pointer;
 }
 
 div.add-task button:active {
@@ -197,7 +198,58 @@ div.task label {
     font-size: 1.8rem;
 }
 
-@media(max-width: 530px) {
+div.alert {
+    height: 30%;
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    top: 20%;
+    left: 20%;
+
+    background: #072a57;
+    color: white;
+    border-radius: 5px;
+
+    animation-duration: .4s;
+    animation-name: bounceIn;
+}
+
+@keyframes bounceIn {
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
+    }
+  
+    60% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+div.alert button {
+    height: 30px;
+    width: 95%;
+    
+    background: #ffffff;
+    border: 1px solid transparent;
+    border-radius: 5px;    
+    font-weight: bold;
+
+    cursor: pointer;
+
+    margin-top: 1rem;
+}
+
+@media(max-width: 570px) {
     :root {
         font-size: 60%;
     }
@@ -207,13 +259,18 @@ div.task label {
     }
 }
 
-@media(max-width: 430px) {
+@media(max-width: 450px) {
     :root {
         font-size: 58%;
     }
 
     div#container {
         max-width: 60%;
+    }
+
+    div.alert {
+        width: 80%;
+        left: 10%;
     }
 }
 
